2013-08-31  Roland Levillain  <roland@lrde.epita.fr>

	Factor the generation of tests in Milena's apps/mesh-segm-skel.

	* apps/mesh-segm-skel/Makefile.am: Here.

2013-08-31  Roland Levillain  <roland@lrde.epita.fr>

	Distribute sources of generated tests in Milena apps.

	* apps/generic-skel/Makefile.am (EXTRA_DIST): Add test-mixed.in.
	* apps/mesh-segm-skel/Makefile.am (EXTRA_DIST): Add
	test-mesh-complex-2-collapse.in,
	test-mesh-complex-max-curv-2-collapse.in,
	test-mesh-complex-max-curv-1-collapse.in and
	test-mixed.in.

2013-08-31  Roland Levillain  <roland@lrde.epita.fr>

	Do not install Milena apps.

	* apps/generic-skel/Makefile.am,
	* apps/mesh-segm-skel/Makefile.am:
	s/bin_PROGRAMS/noinst_PROGRAMS/.

2013-08-31  Roland Levillain  <roland@lrde.epita.fr>

	Fix the distribution.

	* apps/generic-skel/Makefile.am (noinst_HEADERS):
	Add image3d-skel.hh.

2013-08-31  Roland Levillain  <roland@lrde.epita.fr>

	Fix a Makefile inclusion in Milena's apps/generic-skel.

	* apps/generic-skel/Makefile.am: Include
	$(top_srcdir)/milena/common.mk.

2013-08-30  Roland Levillain  <roland@lrde.epita.fr>

	Simplify even more Milena Makefiles thanks to AM_DEFAULT_SOURCE_EXT.

	* apps/generic-skel/Makefile.am,
	* apps/mesh-segm-skel/Makefile.am,
	* tests/io/vtk/Makefile.am,
	* tests/transform/Makefile.am,
	* tools/Makefile.am:
	Here.

2013-08-30  Roland Levillain  <roland@lrde.epita.fr>

	Regen images of the Milena documentation.

	* doc/figures/extend-1.ppm,
	* doc/figures/extend-2.ppm,
	* doc/figures/extend-3.ppm,
	* doc/figures/extend-4.ppm,
	* doc/figures/extend-5.ppm,
	* doc/figures/fill-1.ppm,
	* doc/figures/fill-2.ppm,
	* doc/figures/fill-imageif-cfun-1.ppm,
	* doc/figures/fill-subdomain-1.pbm,
	* doc/figures/fill-subdomain-2.ppm,
	* doc/figures/fill-subdomain-3.ppm,
	* doc/figures/fill-subdomain-4.ppm,
	* doc/figures/ima2d-rot-1.ppm,
	* doc/figures/ima2d-rot-2.ppm,
	* doc/figures/ima_save.pbm,
	* doc/figures/labeling-compute-1.pbm,